[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["khabar0val <alexander.khabarov.123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector-python = "^8.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
